# BakcylProgramowania2022

./: CMakeLists.txt
ex01/include/ex01/: convert.hh
ex01/src/: convert.cc  main.cc
ex02/include/ex02/: English.hh  German.hh  Language.hh
ex02/src/: English.cc  German.cc  main.cc
ex03/include/ex03/: CaesarCipher.hh
ex03/src/: CaesarCipher.cc  main.cc
ex04/src/: Result.cc  main.cc
